# Offloading-mechanism

./: package.xml  setup.py
carriage_drop_control/: _init_.py  drop_control_node.py
src/carriage_drop_control/: CMakeLists.txt  package.xml  vision_node.py
src/carriage_drop_control/launch/: carriage_dorp_system.launch.py
