<?xml version="1.0"?>
<package format="3">
  <name>carriage_drop_control</name>
  <version>0.0.1</version>
  <description>Control node for carriage drop servo integrated with ROSArduinoBridge</description>

  <maintainer email="you@example.com">Neural</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_arduino_bridge</depend>

  <export>
  </export>
</package>
